added size of list option

--- a/auto_coin_list.ipynb
+++ b/auto_coin_list.ipynb
@@ -190,7 +190,8 @@
    "outputs": [],
    "source": [
     "bridge = 'USDT'\n",
-    "startcoin = 'QTUM'"
+    "startcoin = 'QTUM'\n",
+    "size_of_list = 10"
    ]
   },
   {
@@ -275,7 +276,7 @@
     "week_corr = RA_week_data.corr()\n",
     "two_week_corr = RA_2week_data.corr()\n",
     "\n",
-    "coinlist = pick_coins(startcoin + bridge, day_corr , week_corr , two_week_corr , 10 )\n",
+    "coinlist = pick_coins(startcoin + bridge, day_corr , week_corr , two_week_corr , size_of_list )\n",
     "coinlist = "
    ]
   },
