fixed corrMatrixday.values bug

--- a/auto_coin_list.ipynb
+++ b/auto_coin_list.ipynb
@@ -551,9 +551,9 @@
     }
    ],
    "source": [
-    "print(f\"Day Correlation avg: {corrMatrixday.values[np.triu_indices_from(corrMatrix.values,1)].mean()}\")\n",
-    "print(f\"Week Correlation avg: {corrMatrixweek.values[np.triu_indices_from(corrMatrix.values,1)].mean()}\")\n",
-    "print(f\"Two Week Correlation avg: {corrMatrixtwoweek.values[np.triu_indices_from(corrMatrix.values,1)].mean()}\")"
+    "print(f\"Day Correlation avg: {corrMatrixday.values[np.triu_indices_from(corrMatrixday.values,1)].mean()}\")\n",
+    "print(f\"Week Correlation avg: {corrMatrixweek.values[np.triu_indices_from(corrMatrixweek.values,1)].mean()}\")\n",
+    "print(f\"Two Week Correlation avg: {corrMatrixtwoweek.values[np.triu_indices_from(corrMatrixtwoweek.values,1)].mean()}\")"
    ]
   },
   {
